--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@trpc/tanstack-react-query": "^11.0.4",
     "@types/three": "^0.174.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.41.0",
