--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "drizzle-orm": "^0.41.0",
     "jszip": "^3.10.1",
     "lucide-react": "^0.484.0",
+    "nanoid": "^5.1.5",
     "next": "^15.2.3",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
