--- a/filestorage/package.json
+++ b/filestorage/package.json
@@ -6,10 +6,12 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
+    "archiver": "^7.0.1",
     "hono": "^4.7.2",
     "nanoid": "^5.1.2"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.3",
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1"
   }
